--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "4.29.7",
+		"@tapcart/webbridge-react": "^1.4.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-router-dom": "6.11.2",
-		"tapcart-codeblocks-sdk-test": "^1.3.4"
+		"react-router-dom": "6.11.2"
 	},
 	"devDependencies": {
 		"@nabla/vite-plugin-eslint": "1.5.0",
